# MacroResearch

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py
src/data/: fred_ingest.py  models.py  yfinance_ingest.ipynb
