[project]
name = "macro-research"
version = "0.1.0"
description = "Modèle de prédiction Point-in-Time de l'inflation américaine (US CPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "SQLAlchemy>=2.0.0",
    "requests>=2.31.0",
    "yfinance>=0.2.36",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]